--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,6 +29,7 @@ jobs:
       uses: appleboy/scp-action@v0.0.1
       with:
         host: ${{ secrets.REMOTE_IP }}
+        port: 22
         username: ${{ secrets.REMOTE_USER }}
         password: ${{ secrets.REMOTE_PASS }}
         source: "build/dokka"
