--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
       run: ./gradlew dokka
     - run: mv build/dokka/-butterfly build/dokka/butterfly
     - name: Push to docs server
-      uses: appleboy/scp-action@v0.0.1
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.REMOTE_IP }}
         port: 22
