--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,6 +6,7 @@ name: Kotlin CI with Gradle
 on:
   push:
     branches: [ master ]
+    paths-ignore: [ "*.yml" ]
   pull_request:
     branches: [ master ]
 
