--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,6 @@ jobs:
     - name: Create Documentation
       run: ./gradlew dokka
     - run: mv build/dokka/-butterfly build/dokka/butterfly
-    - run: cd build/dokka
     - name: Push to docs server
       uses: appleboy/scp-action@master
       with:
@@ -33,6 +32,6 @@ jobs:
         port: 22
         username: ${{ secrets.REMOTE_USER }}
         password: ${{ secrets.REMOTE_PASS }}
-        source: "."
+        source: "build/dokka/butterfly,build/dokka/style.css"
         target: "~/kotlin-docs"
         override: true
