--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,6 +20,13 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Set Up Cache
+      uses: actions/cache@v2.0.0
+      with:
+        path: |
+          .gradle
+          build
+        key: ${{ runner.os }}-gradle-docs-cache
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Create Documentation
