--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,13 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
+    - name: Set Up Cache
+      uses: actions/cache@v2.0.0
+      with:
+        path: |
+          .gradle
+          build
+        key: ${{ runner.os }}-gradle-cache
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
