--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Create Documentation
       run: ./gradlew dokka
     - run: |
+        chmod -R uo=rw,g=r build/dokka
         mv build/dokka/-butterfly build/dokka/butterfly
     - name: Push to docs server
       uses: appleboy/scp-action@master
