--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,6 +33,7 @@ jobs:
       run: ./gradlew dokka
     - run: |
         mv build/dokka/-butterfly build/dokka/butterfly
+        chmod -R +777 build/dokka
     - name: Push to docs server
       uses: appleboy/scp-action@master
       with:
