--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Set Up Cache
       uses: actions/cache@v2.0.0
       with:
-        path: |
-          .gradle
-          build
-        key: ${{ runner.os }}-gradle-cache
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-test-gradle-${{ hashFiles('**/*.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-test-gradle-
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
