--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,11 +5,11 @@ name: Kotlin CI with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 'version/**' ]
     paths-ignore: 
     - '**.yml'
   pull_request:
-    branches: [ master ]
+    branches: [ master, 'version/**' ]
 
 jobs:
   build:
