--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Create Documentation
-      run: ./gradlew dokka
+      run: ./gradlew dokkaHtml
     - run: |
-        mv build/dokka/-butterfly build/dokka/butterfly
+        mv build/dokka/html/-butterfly build/dokka/html/butterfly
         chmod -R +777 build/dokka
     - name: Push to docs server
       uses: appleboy/scp-action@master
@@ -39,7 +39,7 @@ jobs:
         port: 22
         username: ${{ secrets.REMOTE_USER }}
         password: ${{ secrets.REMOTE_PASS }}
-        source: "build/dokka/butterfly,build/dokka/style.css"
+        source: "build/dokka/html/*"
         target: "/var/www/docs.augu.dev/dist"
         overwrite: true
         strip_components: 2
