--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,9 +29,8 @@ jobs:
       run: chmod +x gradlew
     - name: Create Documentation
       run: ./gradlew dokkaHtml
-    - run: |
-        mv build/dokka/html/-butterfly build/dokka/html/butterfly
-        chmod -R +777 build/dokka
+    - name: Give Permissions
+      run: chmod -R +777 build/dokka
     - name: Push to docs server
       uses: appleboy/scp-action@master
       with:
